--- a/alembic.ini
+++ b/alembic.ini
@@ -3,6 +3,7 @@
 [alembic]
 # path to migration scripts
 script_location = migrations
+file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
